# itlab_2024

./: .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md  codecov.yml  requirements.txt
.github/workflows/: codeql-analysis.yml  main.yml  static-analysis-pr.yml
IR/: IR.cpp  IR.h
app/: CMakeLists.txt
app/extract-network-data/: CMakeLists.txt  README.md  main.cpp
app/frontend/: CMakeLists.txt  GetModel.sh  README.md  main.cpp
app/inference/: CMakeLists.txt  main.cpp
app/inference/resource/: classification_list.txt
app/layer_example/: CMakeLists.txt  ConcatLayer.cpp  ConvolutionLayer.cpp  ElementwiseLayer.cpp  MatMulLayer.cpp  PoolingLayer.cpp  ReshapeLayer.cpp  SliceLayer.cpp  SplitLayer.cpp
app/yolov8-cls-inference/: CMakeLists.txt  README.md  export.py  main.cpp
cmake/: configure.cmake
include/: CMakeLists.txt  onnx.pb.h
include/graph/: graph.h
include/layer/: layer.h
include/model_parser/: model_parser.h  onnx_model_parser.h
include/tensor/: tensor.h
include/tesnor/: tensor.h
src/: CMakeLists.txt  onnx.pb.cc
src/graph/: CMakeLists.txt  graph.cpp
src/layer/: ConcatenateLayer.cpp  ConvLayer.cpp  ElementwiseLayer.cpp  MatMulLayer.cpp  PoolingLayer.cpp  ReshapeLayer.cpp  ResizeLayer.cpp  SliceLayer.cpp  SoftmaxLayer.cpp  SplitLayer.cpp  TransposeLayer.cpp  layer.cpp
src/model_parser/: model_parser.cpp  onnx_model_parser.cpp
src/tensor/: tensor.cpp
test/: CMakeLists.txt  test_graph.cpp
test/graph/: test_graph.cpp
test/layer/: test_convlayermock.cpp  test_elemlayermock.cpp  test_matmullayermock.cpp  test_poolinglayermock.cpp  test_slicelayermock.cpp  test_splitlayermock.cpp
test/tensor/: test_tensor.cpp
